# rust-composable-architecture

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml  publish-docs.yml
about/: CHANGELOG.md
composable-architecture/src/dependencies/: values.rs
composable-architecture/src/derive_macros/: mod.rs
composable-architecture/src/derive_macros/derive_reducers/src/: enums.rs  lib.rs  structs.rs  util.rs
composable-architecture/src/effects/: delay.rs  task.rs
composable-architecture/src/store/: mod.rs
composable-architecture/src/store/testing/: mod.rs
composable-views/: Cargo.toml
composable-views/examples/winit/: main.rs
composable-views/examples/winit/gpu/: mod.rs  shader.wgsl
composable-views/examples/winit/ink/: grammer.rs  mod.rs
composable-views/examples/winit/script/: mod.rs
composable-views/examples/winit/settings/: mod.rs
composable-views/examples/winit/window/: mod.rs
composable-views/src/: lib.rs
composable-views/src/gesture/: mod.rs  recognizer.rs
composable-views/src/layout/: mod.rs  spacing.rs
composable-views/src/modifiers/: fixed.rs  padding.rs
composable-views/src/output/: gpu.rs  svg.rs
composable-views/src/shapes/: mod.rs
composable-views/src/text/: font.rs  mod.rs
composable-views/src/ui_id/: Cargo.toml
composable-views/src/ui_id/src/: lib.rs
src/store/: runtime.rs
