[workspace]
resolver = "2"
members = [
    "composable-architecture",
    "composable-views"
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
composable = { path = "composable-architecture" }
composable-views = { path = "composable-views" }
futures = { version = "0.3.30", features = ["executor"] }

# dev-dependencies
ntest_timeout = "0.9.3"
divan = "0.1.14"
insta = "1.39.0"


[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = false
strip = true
lto = "fat"

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev.package."*"]
opt-level = 3
