[package]
name = "composable-views"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []


[dependencies]
composable.workspace = true
rustybuzz = "0.20.1"
lyon = "1.0.1"
usvg = "0.44.0"
svg = "0.18.0"

[dependencies.ui_id]
path = "src/ui_id"


[dev-dependencies]
futures.workspace = true
insta.workspace = true

ntest_timeout.workspace = true
divan.workspace = true


winit = "0.30.5"
meshopt = "0.4.0"
muda = "0.15.3"
wgpu = "23.0.0"

# platforms
[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
features = ["Win32_UI", "Win32_UI_WindowsAndMessaging"]
version = "0.59.0"
[target.'cfg(target_os = "macos")'.dependencies.cocoa]
version = "0.26.0"

